# aros

./: .gitignore  README.md  debug_checklist.md  pyproject.toml
config/: default.yaml
docs/: implementation_agent.md  model_interview.md
scripts/: demo.py
src/aros/: __init__.py  benchmark_registry.py  config.py  database.py  dataset_registry.py  evaluator.py  experiment_runner.py  generalization_monitor.py  loop.py  models.py  research_agent.py  search_engine.py
tests/: __init__.py  test_smoke.py
