[project]
name = "aros"
version = "0.1.0"
description = "Autonomous Research Operating System — a domain-agnostic platform for iterative experimentation"
requires-python = ">=3.12"
authors = [
    { name = "Versital" },
]
dependencies = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
aros = "aros.loop:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
